adding working Colab protype for Gradio App to load image & predict

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "b020a19a-77ac-4d80-9112-cf78065fcfe5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "a66d4320-d507-4d40-a488-72baefca7b71",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "a4fef6ed-ae5e-4c12-9824-c438604cd477",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "<PIL.Image.Image image mode=RGB size=300x300>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "c999935d-e0a7-4e56-a035-918a3fa973cb",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "557bf311-b92f-4334-9495-226f43af12fd",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "fdfdc5b5-2a48-4db6-b260-7e8719bab181",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "b6a86905-9a2d-4bc3-9a2c-2b3e1e088b1e",
    "metadata": {},
    "outputs": [
@@ -172,20 +172,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:6 out of the last 6 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x15d5088b0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 167ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 141ms/step\n",
       "Our model's prediction is benign.\n"
      ]
     }
    ],
    "source": [
-    "print(process_image(app_images[0]))\n",
-    "\n"
+    "print(process_image(app_images[0]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "18b41599-37bd-4492-8aa2-fb73652384b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3e3d614-bb51-4212-8b04-aad0c75c3f25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c5a5c75-aeb8-467d-b7e2-45e49757c528",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b22695f-502b-4246-b23a-2d112f28873d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "821c50b1-6d70-4c8f-8843-55485dffc192",
    "metadata": {},
    "outputs": [
@@ -193,8 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 300, 300, 3)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 155ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 150ms/step\n",
       "Our model's prediction is benign.\n"
      ]
     }
@@ -206,14 +235,15 @@
     "# Load the model\n",
     "model = load_model('saved_model/melanoma_cnn_model.keras')\n",
     "\n",
-    "# Prediction for a new image data\n",
+    "# Call function to convert Image file to numpy file, convert image to floating point & normalize the file\n",
     "image_normalized = format_image_for_prediction(app_images[0])\n",
-    "print(image_normalized.shape)\n",
-    "# Note - need to convert Image file to numpy file, convert image to floating point & normalize the file and create image_data\n",
+    "# print(image_normalized.shape)\n",
+    "\n",
+    "# Call function to predict image results\n",
     "prediction_probs = model.predict(image_normalized)\n",
-    "prediction = np.argmax(prediction_probs, axis=1)\n",
     "\n",
     "# Interpret the prediction\n",
+    "prediction = np.argmax(prediction_probs, axis=1)\n",
     "if prediction == 1:\n",
     "    print(\"Our model's prediction is malignant.\")\n",
     "else:\n",
